--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,15 @@
-title: git-wiki
-description: git-wiki is a jekyll theme originally based on jekyll-theme-minimal
+title: git-wiki-demo
+description: This is a demo of git-wiki theme for jekyll
 show_downloads: true
-git_branch: master
-logo_url:
+comments: true
+logo_url: https://upload.wikimedia.org/wikipedia/en/thumb/8/80/Wikipedia-logo-v2.svg/1122px-Wikipedia-logo-v2.svg.png
 google_analytics:
+git_branch: gh-pages
 theme: 
-wiki_folder: wiki
-#https://github.com/zimmcl/SeDiceAtomico/wiki
 use_github_wiki: false
 use_prose_io: true
-google_cse_token: 
-custom_head: false
-custom_sidebar: false
-custom_footer: false
+google_cse_token: 007197903287787072094:8rbvkeqo6qw
+custom_sidebar: true
 gems:
   - jekyll-sitemap
   - jekyll-mentions
